--- a/index.html
+++ b/index.html
@@ -365,13 +365,48 @@
 
     <footer class="footer">
       <div class="footer-container container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-accent">Studio</span></a
-        >
-        <p class="footer-desc">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-description">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-accent">Studio</span></a
+          >
+          <p class="footer-desc">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <p class="socials-title">Social media</p>
+          <ul class="footer-items">
+            <li class="footer-elem">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-elem">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-elem">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-elem">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
