add overlay and style for it

--- a/index.html
+++ b/index.html
@@ -293,66 +293,96 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-icon"
-                src="./images/portfolio/img-1.jpg"
-                alt="Banking App"
-                width="360" />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-icon"
+                  src="./images/portfolio/img-1.jpg"
+                  alt="Banking App"
+                  width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+              </div>
               <div class="porfolio-card">
                 <h3 class="portfolio-project">Banking App</h3>
                 <p class="portfolio-desc">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-icon"
-                src="./images/portfolio/img-2.jpg"
-                alt="Cashless Payment"
-                width="360" />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-icon"
+                  src="./images/portfolio/img-2.jpg"
+                  alt="Cashless Payment"
+                  width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+              </div>
               <div class="porfolio-card">
                 <h3 class="portfolio-project">Cashless Payment</h3>
                 <p class="portfolio-desc">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-icon"
-                src="./images/portfolio/img-3.jpg"
-                alt="Meditation App"
-                width="360" />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-icon"
+                  src="./images/portfolio/img-3.jpg"
+                  alt="Meditation App"
+                  width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+              </div>
               <div class="porfolio-card">
                 <h3 class="portfolio-project">Meditation App</h3>
                 <p class="portfolio-desc">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-icon"
-                src="./images/portfolio/img-4.jpg"
-                alt="Taxi Service"
-                width="360" />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-icon"
+                  src="./images/portfolio/img-4.jpg"
+                  alt="Taxi Service"
+                  width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+              </div>
               <div class="porfolio-card">
                 <h3 class="portfolio-project">Taxi Service</h3>
                 <p class="portfolio-desc">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-icon"
-                src="./images/portfolio/img-5.jpg"
-                alt="Screen Illustrations"
-                width="360" />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-icon"
+                  src="./images/portfolio/img-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+              </div>
               <div class="porfolio-card">
                 <h3 class="portfolio-project">Screen Illustrations</h3>
                 <p class="portfolio-desc">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-icon"
-                src="./images/portfolio/img-6.jpg"
-                alt="Online Courses"
-                width="360" />
+              <div class="portfolio-wrapper">
+                <img
+                  class="portfolio-icon"
+                  src="./images/portfolio/img-6.jpg"
+                  alt="Online Courses"
+                  width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+              </div>
               <div class="porfolio-card">
                 <h3 class="portfolio-project">Online Courses</h3>
                 <p class="portfolio-desc">Marketing</p>
